示範 $event 事件資料

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -26,7 +26,7 @@
     <div class="container">
       <img src="/assets/images/logo.png" class="pull-left logo"
         [title]="sitename"
-        (click)="changeSitename()">
+        (click)="changeSitename($event)">
       <div class="pull-left">
         <h1><a href="http://blog.miniasp.com/">{{ sitename }}</a></h1>
         <h3 [textContent]="subtitle"></h3>
