--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -94,8 +94,12 @@
         <div class="widget search">
           <div class="widget-content">
             <div id="searchbox">
-              <input type="text" placeholder="請輸入搜尋關鍵字" accesskey="s">
+              <input type="text" placeholder="請輸入搜尋關鍵字" accesskey="s"
+                     [value]="keyword"
+                     (keyup.escape)="keyword=''"
+                     (keyup.enter)="keyword=$event.target.value">
               <input type="button" value="搜尋" id="searchbutton">
+              {{ keyword }}
             </div>
           </div>
         </div>
