--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -95,10 +95,11 @@
           <div class="widget-content">
             <div id="searchbox">
               <input type="text" placeholder="請輸入搜尋關鍵字" accesskey="s"
+                     #tKeyword
                      [value]="keyword"
-                     (keyup.escape)="keyword=''"
-                     (keyup.enter)="keyword=$event.target.value">
-              <input type="button" value="搜尋" id="searchbutton">
+                     (keyup.escape)="doSearch('')"
+                     (keyup.enter)="doSearch(tKeyword.value)">
+              <input type="button" value="搜尋" (click)="doSearch(tKeyword.value)">
               {{ keyword }}
             </div>
           </div>
