--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -29,7 +29,7 @@
         (click)="changeSitename($event)">
       <div class="pull-left">
         <h1><a href="http://blog.miniasp.com/">{{ sitename }}</a></h1>
-        <h3 [textContent]="subtitle" [ngStyle]="{'font-size': fontSize+'pt'}"></h3>
+        <h3 [textContent]="subtitle" [style.font-size.pt]="fontSize"></h3>
       </div>
       <div id="social-icons" class="pull-right social-icon">
         <a href="https://www.facebook.com/will.fans" title="Will 保哥的技術交流中心" target="_blank">
