--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -137,7 +137,7 @@
     <p class="text-muted credit"> Copyright © 2016 by <a href="https://www.facebook.com/will.fans" target="_blank">Will
         保哥</a> @ <a href="http://www.miniasp.com/" target="_blank">多奇數位創意有限公司</a> - Powered by <a
          href="http://dotnetblogengine.net/" target="_blank">BlogEngine.NET</a> 3.2.0.3 - Design by <a
-         href="http://seyfolahi.net/" target="_blank" title="Farzin Seyfolahi - UI/UX Designer at BlogEngine.NET">FS</a>
+         href="http://seyfolahi.net/" appNoLink target="_blank" title="Farzin Seyfolahi - UI/UX Designer at BlogEngine.NET">FS</a>
     </p>
   </div>
 </footer>
