示範 @Output() 自訂事件繫結用法

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,7 +12,7 @@
 
         <!-- Article START-->
         <app-article *ngFor="let item of data; let i=index"
-          [i]="i" [item]="item">
+          [i]="i" [item]="item" (delete)="deleteArticle($event)">
         </app-article>
 
         <!-- Article END-->
