--- a/src/app/article/article.component.html
+++ b/src/app/article/article.component.html
@@ -6,7 +6,7 @@
     <div class="post-info clearfix">
       <span class="post-date"><i class="glyphicon glyphicon-calendar"></i>{{item.date | date:'yyyy-MM-dd'}}</span>
       <span class="post-author"><i class="glyphicon glyphicon-user"></i><a
-           href="http://blog.miniasp.com/author/will.aspx">{{item.author}}</a></span>
+           href="http://blog.miniasp.com/author/will.aspx">{{item.author | mask}}</a></span>
       <span class="post-category"><i class="glyphicon glyphicon-folder-close"></i><a
            [href]="item['category-link']">{{item.category}}</a></span>
       <button type="button" (click)="doDelete()">刪除</button>
